reorg file structure

--- a/src/BTS-Samples.ipynb
+++ b/src/BTS-Samples.ipynb
@@ -971,7 +971,7 @@
     "\n",
     "net.from_nx(G)\n",
     "net.show_buttons(filter_=['physics'])\n",
-    "net.show('sample_uses_net.html')\n",
+    "net.show('../index.html')\n",
     "\n"
    ]
   }
