--- a/src/BTS-Samples.ipynb
+++ b/src/BTS-Samples.ipynb
@@ -588,6 +588,160 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>year</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>style</th>\n",
+       "      <th>sample</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>230</td>\n",
+       "      <td>Brooklyn Blew Up the Bridge</td>\n",
+       "      <td>MC Mitchski</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>Hip-Hop / Rap / R&amp;B</td>\n",
+       "      <td>Vocals / Lyrics</td>\n",
+       "      <td>https://www.whosampled.com/Mountain/Long-Red/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>429</td>\n",
+       "      <td>That's How I'm Livin' (On the Rox Remix)</td>\n",
+       "      <td>Ice-T</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>Hip-Hop / Rap / R&amp;B</td>\n",
+       "      <td>Drums</td>\n",
+       "      <td>https://www.whosampled.com/Mountain/Long-Red/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1777</th>\n",
+       "      <td>1800</td>\n",
+       "      <td>How Could You</td>\n",
+       "      <td>J Foe</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>Hip-Hop / Rap / R&amp;B</td>\n",
+       "      <td>Vocals / Lyrics</td>\n",
+       "      <td>https://www.whosampled.com/Run-DMC/Here-We-Go-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>99</td>\n",
+       "      <td>Wussup Wit the Luv</td>\n",
+       "      <td>Digital Underground feat. 2Pac</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>Hip-Hop / Rap / R&amp;B</td>\n",
+       "      <td>Vocals / Lyrics</td>\n",
+       "      <td>https://www.whosampled.com/Mountain/Long-Red/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1289</th>\n",
+       "      <td>1312</td>\n",
+       "      <td>Back Stage Pacin'</td>\n",
+       "      <td>Brother Ali</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Hip-Hop / Rap / R&amp;B</td>\n",
+       "      <td>Multiple Elements</td>\n",
+       "      <td>https://www.whosampled.com/Run-DMC/Here-We-Go-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                     title  \\\n",
+       "207    230               Brooklyn Blew Up the Bridge   \n",
+       "406    429  That's How I'm Livin' (On the Rox Remix)   \n",
+       "1777  1800                             How Could You   \n",
+       "76      99                        Wussup Wit the Luv   \n",
+       "1289  1312                         Back Stage Pacin'   \n",
+       "\n",
+       "                              artist  year                genre  \\\n",
+       "207                      MC Mitchski  1987  Hip-Hop / Rap / R&B   \n",
+       "406                            Ice-T  1993  Hip-Hop / Rap / R&B   \n",
+       "1777                           J Foe  1990  Hip-Hop / Rap / R&B   \n",
+       "76    Digital Underground feat. 2Pac  1993  Hip-Hop / Rap / R&B   \n",
+       "1289                     Brother Ali  2003  Hip-Hop / Rap / R&B   \n",
+       "\n",
+       "                  style                                             sample  \n",
+       "207     Vocals / Lyrics      https://www.whosampled.com/Mountain/Long-Red/  \n",
+       "406               Drums      https://www.whosampled.com/Mountain/Long-Red/  \n",
+       "1777    Vocals / Lyrics  https://www.whosampled.com/Run-DMC/Here-We-Go-...  \n",
+       "76      Vocals / Lyrics      https://www.whosampled.com/Mountain/Long-Red/  \n",
+       "1289  Multiple Elements  https://www.whosampled.com/Run-DMC/Here-We-Go-...  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('data/processed/nodes_unique.csv')\n",
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'title', 'artist', 'year', 'genre', 'style', 'sample'], dtype='object')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdf = df\n",
+    "rdf = rdf.drop('id', axis=1)\n",
+    "rdf.to_csv('data/processed/nodes_unique.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [
@@ -710,174 +864,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "can only convert an array of size 1 to a Python scalar",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 39>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     net \u001b[39m=\u001b[39m add_sample_to_network(sample_df, net)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m net\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m net \u001b[39m=\u001b[39m make_sample_network(df)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m net\u001b[39m.\u001b[39mto_csv(\u001b[39m'\u001b[39m\u001b[39mdata/processed/edges.csv\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32m/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb Cell 14\u001b[0m in \u001b[0;36mmake_sample_network\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mfor\u001b[39;00m sample \u001b[39min\u001b[39;00m sample_list:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m   sample_df \u001b[39m=\u001b[39m get_sample_df(df, sample)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m   net \u001b[39m=\u001b[39m add_sample_to_network(sample_df, net)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39mreturn\u001b[39;00m net\n",
+      "\u001b[1;32m/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb Cell 14\u001b[0m in \u001b[0;36madd_sample_to_network\u001b[0;34m(root, df)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39madd_sample_to_network\u001b[39m(root, df):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m   root_index \u001b[39m=\u001b[39m root[root[\u001b[39m'\u001b[39;49m\u001b[39mstyle\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mSource\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mid\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mitem()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m   \u001b[39mfor\u001b[39;00m index, row \u001b[39min\u001b[39;00m root\u001b[39m.\u001b[39miterrows():\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brendankeane/whosampled-artist/src/BTS-Samples.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     cur_id \u001b[39m=\u001b[39m row[\u001b[39m'\u001b[39m\u001b[39mid\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/base.py:349\u001b[0m, in \u001b[0;36mIndexOpsMixin.item\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    347\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m    348\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mnext\u001b[39m(\u001b[39miter\u001b[39m(\u001b[39mself\u001b[39m))\n\u001b[0;32m--> 349\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mcan only convert an array of size 1 to a Python scalar\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: can only convert an array of size 1 to a Python scalar"
+     ]
+    }
+   ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "net = pd.DataFrame(columns=['source', 'target', 'value'])\n",
-    "df = pd.read_csv('data/processed/song_data.csv')\n",
+    "df = pd.read_csv('data/processed/nodes_unique.csv')\n",
     "\n",
     "\n",
     "def get_sample_df(df, val):\n",
     "  rdf = df[df['sample'] == val]\n",
     "  return rdf\n",
     "\n",
-    "sample_root = get_sample_df(df, 'https://www.whosampled.com/Mountain/Long-Red/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source</th>\n",
-       "      <th>target</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>819</th>\n",
-       "      <td>5</td>\n",
-       "      <td>846</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>820</th>\n",
-       "      <td>5</td>\n",
-       "      <td>847</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>821</th>\n",
-       "      <td>5</td>\n",
-       "      <td>848</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>822</th>\n",
-       "      <td>5</td>\n",
-       "      <td>849</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>823</th>\n",
-       "      <td>5</td>\n",
-       "      <td>850</td>\n",
-       "      <td>0.001214</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>824 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    source target     value\n",
-       "0        5      5  0.001214\n",
-       "1        5     28  0.001214\n",
-       "2        5     29  0.001214\n",
-       "3        5     30  0.001214\n",
-       "4        5     31  0.001214\n",
-       "..     ...    ...       ...\n",
-       "819      5    846  0.001214\n",
-       "820      5    847  0.001214\n",
-       "821      5    848  0.001214\n",
-       "822      5    849  0.001214\n",
-       "823      5    850  0.001214\n",
-       "\n",
-       "[824 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "\n",
     "def add_sample_to_network(root, df):\n",
-    "  root_index = root[root['style'] == 'Source']['id']\n",
+    "  root_index = root[root['style'] == 'Source']['id'].item()\n",
     "\n",
     "  for index, row in root.iterrows():\n",
+    "    cur_id = row['id']\n",
     "\n",
-    "    new_edge = pd.DataFrame({\n",
-    "      'source': root_index,\n",
-    "      'target': row['id'],\n",
-    "      'value': [1/len(root)]\n",
-    "    })\n",
+    "    if root_index != cur_id:\n",
+    "      new_edge = pd.DataFrame({\n",
+    "        'source': root_index,\n",
+    "        'target': row['id'],\n",
+    "        'value': [1/len(root)]\n",
+    "      })\n",
     "\n",
-    "    df = pd.concat([df, new_edge], ignore_index=True)\n",
+    "      df = pd.concat([df, new_edge], ignore_index=True)\n",
     "\n",
     "  return df\n",
     "\n",
-    "\n",
-    "net = add_sample_to_network(sample_root, net)\n",
-    "net\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def make_sample_network(df):\n",
     "  sample_list = list(set(df['sample']))\n",
     "  net = pd.DataFrame(columns=['source', 'target', 'value'])\n",
@@ -888,41 +921,48 @@
     "\n",
     "  return net\n",
     "\n",
-    "net = make_sample_network(df)"
+    "net = make_sample_network(df)\n",
+    "net.to_csv('data/processed/edges.csv')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 93,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1852, 3)"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "net.shape"
+    "### **Creating the visualization from the node and edge tables**\n",
+    "With all nodes and edges defined, we can now create the network diagram. To do this, we will load the `nodes.csv` DataFrame and define the connections with the `edges.csv` DataFrame. The result should be an interactive network diagram consisting of all songs that share a sample with BTS."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net.to_csv('data/processed/edge_list.csv')"
+    "# Importing packages and necessary data\n",
+    "\n",
+    "from pyvis.network import Network\n",
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "nodes = pd.read_csv('data/processed/nodes.csv')\n",
+    "nodes.unique()\n",
+    "edges = pd.read_csv('data/processed/edges.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(nodes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +970,7 @@
      "output_type": "stream",
      "text": [
       "Warning: When  cdn_resources is 'local' jupyter notebook has issues displaying graphics on chrome/safari. Use cdn_resources='in_line' or cdn_resources='remote' if you have issues viewing graphics in a notebook.\n",
-      "sample_uses_net.html\n"
+      "../index.html\n"
      ]
     },
     {
@@ -940,7 +980,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"600px\"\n",
-       "            src=\"sample_uses_net.html\"\n",
+       "            src=\"../index.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -948,31 +988,35 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x15456ace0>"
+       "<IPython.lib.display.IFrame at 0x175495b70>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import networkx as nx\n",
+    "net = Network(\n",
+    "  notebook=True,\n",
+    ")\n",
+    "nodes['label'] = nodes.apply(lambda row: '{} ({}) - {}'.format(row['title'], row['year'], row['artist']), axis=1)\n",
+    "nodes['colors'] = np.where(nodes['style'] == 'Source', 'CornflowerBlue', np.where(df['artist'] == 'BTS', 'DarkOrange', 'DimGray'))\n",
     "\n",
-    "G = nx.Graph()\n",
+    "titles = nodes['label'].tolist()\n",
+    "labels = nodes['artist'].tolist()\n",
+    "colors = nodes['colors'].tolist()\n",
     "\n",
-    "for index, row in net.iterrows():\n",
-    "  source = row['source']\n",
-    "  target = row['target']\n",
-    "  weight = row['value']\n",
-    "  G.add_edge(source, target, weight=weight)\n",
+    "net.add_nodes(nodes['id'].tolist(),\n",
+    "  title=titles,\n",
+    "  label=labels,\n",
+    "  color=colors)\n",
     "\n",
-    "net = Network(notebook=True)\n",
+    "for index, row in edges.iterrows():\n",
+    "  net.add_edge(row['source'], row['target'], weight=row['value']*len(edges))\n",
     "\n",
-    "net.from_nx(G)\n",
     "net.show_buttons(filter_=['physics'])\n",
-    "net.show('../index.html')\n",
-    "\n"
+    "net.show('../index.html')"
    ]
   }
  ],
